// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js values should support exporting imported variables 1`] = `
"/* packages/processor/test/specimens/values.css */

/* packages/processor/test/specimens/value-import.css */
.red {
    color: red;
}

.green {
    color: green;
}

/* packages/processor/test/specimens/value-export.css */
.red {
    color: red;
}

.green {
    color: green;
}
"
`;

exports[`/processor.js values should support importing variables from a file 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-import.css */
.red {
    color: red;
}

.green {
    color: green;
}
"
`;

exports[`/processor.js values should support local values in value composition 1`] = `
Object {
  "fooga": Array [
    "fooga",
  ],
  "local": "'./local.css'",
  "o": "red",
  "one": "red",
}
`;

exports[`/processor.js values should support simple values 1`] = `
"/* values.css */
.a {
    color: red;
    font-family: Segoe UI
    sans-serif;
}"
`;

exports[`/processor.js values should support value aliasing 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-alias.css */
.aliased {
    color: red;
    background: blue;
}
"
`;

exports[`/processor.js values should support value composition 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-composition.css */
.red {
    color: red;
    background: blue;
}
"
`;

exports[`/processor.js values should support value namespaces 1`] = `
"/* packages/processor/test/specimens/values.css */
/* packages/processor/test/specimens/value-namespace.css */
.red {
    color: red;
}

.blue {
    color: blue;
}

.other {
    color: #000;
}
"
`;

exports[`/processor.js values should support value replacement in :external(...) 1`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.folder { margin: 2px; }
/* packages/processor/test/specimens/simple.css */
.wooga { color: red; }
/* packages/processor/test/specimens/local.css */
.booga { background: green; }
/* packages/processor/test/specimens/externals.css */
.a .wooga {
    color: green;
}
.b:hover .booga {
    background: blue;
}
.wooga .booga {
    color: red;
}
"
`;

exports[`/processor.js values shouldn't replace values unless they're safe 1`] = `
"/* values.css */
.a {
    color: foo-a;
    color: foo(red);
    color: foo_a;
    color: fooa;
    color: foo, red;
    color: foo, red, woo;
    width: foopx;
    color:red;
    color:foo-a;
    color: red;
}

@media red { }
@media red, b {}
@media foo-a, b {}
@media foo-a { }
@media (min-width: red) { }
@media (min-width: foo-a) { }
@media not red {}
@media not (red) {}
@media not foo-a {}
@media not (foo-a) {}"
`;
